static/css/style.css
* {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	list-style: none;
	position: relative
}

html,
body {
	height: 100%;
}

body {
	background-position: 0, 0;
	background-repeat: no-repeat;
	background-size: 100% 100%;
}

/* Configuration overlay */
#modal-overlay {
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,0.6);
	color: #ffffff;
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	opacity: 0;
	visibility: hidden;
	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	transition: all .3s ease;
	z-index: 2;
	overflow-y:auto;
}

#modal-overlay.on {
	visibility: visible;
	opacity: 1;
}

#modal-overlay .col-nav {
	padding-left: 0;
	padding-right: 0;
}

/* Widget default style */
.widget {
	position: relative;
	-webkit-transform-style: preserve-3d;
	-moz-transform-style: preserve-3d;
  	transform-style: preserve-3d;
  	-moz-box-sizing: border-box;
    box-sizing: border-box;
}

.widget .editOverlay {
	position: absolute;
	background-color: rgba(0,0,0,0.6);
	top: -1px;
	left: -1px;
	bottom: -1px;
	right: -1px;
	z-index: 2;
}

.widget .editOverlay button {
	background: #000000;
	display: block;
	width: 2em;
	height: 2em;
	border: 1px solid #f0f0F0;
	color: #f0f0F0;
	margin: 1em auto 1em auto;
	-moz-border-radius: 1em;
	-webkit-border-radius: 1em;
	border-radius: 1em;
}

.widget .editOverlay button:hover,
.widget .editOverlay button:focus {
	background: #f0f0F0;
	color: #000000;	
}

